--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=ayush_super_secret_123
+SECRET_KEY=f9d2$3gH8!zQw1LpR2tVxY4mN0aB7sE
 
 # If you're pushing your code to GitHub, don't commit the .env file!
 # Create a file named .gitignore and add:
